--- a/Documents/Proyectos NetBeans/CarDatabaseCreatorApp/nbproject/project.properties
+++ b/Documents/Proyectos NetBeans/CarDatabaseCreatorApp/nbproject/project.properties
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cardatabasecreatorapp.JFrameCrearDatabase
+main.class=cardatabasecreatorapp.CarDatabaseCreatorApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
